--- a/view/adminhtml/web/styles.css
+++ b/view/adminhtml/web/styles.css
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2016 E-Comprocessing
+ * Copyright (C) 2018 E-Comprocessing Ltd.
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License
@@ -12,10 +12,10 @@
  * GNU General Public License for more details.
  *
  * @author      E-Comprocessing
- * @copyright   2016 E-Comprocessing Ltd.
+ * @copyright   2018 E-Comprocessing Ltd.
  * @license     http://opensource.org/licenses/gpl-2.0.php GNU General Public License, version 2 (GPL-2.0)
  */
 
-.config-heading.EComProcessingDirect:before { content:url(images/ecomprocessing_direct.png);float:right;}
-.config-heading.EComProcessingCheckout:before { content:url(images/ecomprocessing_checkout.png);float:right;}
-.headingEComProcessing strong { padding-left: 150px;background:url(images/ecomprocessing_small.png) no-repeat 0 0;line-height: 50px;}
+.config-heading.EComprocessingDirect:before { content:url(images/ecomprocessing_direct.png);float:right;}
+.config-heading.EComprocessingCheckout:before { content:url(images/ecomprocessing_checkout.png);float:right;}
+.headingEComprocessing strong { padding-left: 150px;background:url(images/ecomprocessing_small.png) no-repeat 0 0;line-height: 50px;}
