--- a/view/frontend/layout/checkout_index_index.xml
+++ b/view/frontend/layout/checkout_index_index.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <!--
-Copyright (C) 2016 E-Comprocessing
+Copyright (C) 2018 E-Comprocessing Ltd.
 
 This program is free software; you can redistribute it and/or
 modify it under the terms of the GNU General Public License
@@ -13,7 +13,7 @@ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.
 
 @author      E-Comprocessing
-@copyright   2016 E-Comprocessing Ltd.
+@copyright   2018 E-Comprocessing Ltd.
 @license     http://opensource.org/licenses/gpl-2.0.php GNU General Public License, version 2 (GPL-2.0)
 -->
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="1column" xsi:noNamespaceSchemaLocation="../../../../../../../lib/internal/Magento/Framework/View/Layout/etc/page_configuration.xsd">
@@ -35,7 +35,7 @@ GNU General Public License for more details.
                                                             <!-- merge payment method renders here -->
                                                             <item name="children" xsi:type="array">
                                                                 <item name="ecomprocessing" xsi:type="array">
-                                                                    <item name="component" xsi:type="string">EComProcessing_Genesis/js/view/payment/ecomprocessing-payments</item>
+                                                                    <item name="component" xsi:type="string">EComprocessing_Genesis/js/view/payment/ecomprocessing-payments</item>
                                                                     <item name="methods" xsi:type="array">
                                                                         <item name="ecomprocessing_direct" xsi:type="array">
                                                                             <item name="isBillingAddressRequired" xsi:type="boolean">true</item>
