--- a/view/adminhtml/layout/adminhtml_system_config_edit.xml
+++ b/view/adminhtml/layout/adminhtml_system_config_edit.xml
@@ -18,6 +18,6 @@ GNU General Public License for more details.
 -->
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <head>
-        <css src="EComprocessing_Genesis::styles.css"/>
+        <css src="Ecomprocessing_Genesis::styles.css"/>
     </head>
 </page>
